# patchdeck

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: container.yml
deploy/: docker-compose.example.yml
docs/: DOCKER.md  PUBLICATION_REVIEW.md  RELEASING.md
src/patchdeck/: __init__.py  docker_import.py  icon_cache.py  main.py  models.py  store.py  update_engine.py
src/patchdeck/static/i18n/: de.json  en.json
tests/: test_api.py
