[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "patchdeck"
version = "0.2.1"
description = "A service-oriented homelab update hub"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "pydantic>=2.7",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
patchdeck = ["static/*.svg", "static/*.png"]
